# til-application

./: README.md  alembic.ini  config.py  containers.py  database.py  main.py  pyproject.toml
common/: auth.py  logger.py  messaging.py
migrations/: env.py
migrations/versions/: 2026_03_18_2040-a06a7d9d8a78_add_user_table.py  2026_03_18_2042-a60a7e7cc3e4_add_note_and_tag_table.py
note/application/: note_service.py
note/domain/repository/: note_repo.py
note/infra/db_models/: note.py
note/infra/repository/: note_repo.py
note/interface/controllers/: note_controllers.py
tests/: user_controller_test.py  user_repo_test.py  user_service_test.py
user/application/: send_welcome_email_task.py  user_service.py
user/domain/repository/: user_repo.py
user/infra/db_models/: user.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
utils/: crypto.py
